Fixed spacing between first and last name.

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -49,6 +49,11 @@ body
     font-weight: 900
     margin: 10px 0px
     font-size: 1.3em
+    display: flex
+    flex-direction: row
+
+.first-name
+    margin-right: 7px
 
 .follow-button
     margin: 0px 0px 15px 0px
